<resources>
    <string name="app_name">BookTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valid_isbn">Valid ISBN*</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="s_add_book">Add book</string>
    <string name="action_settings">action settings</string>
    <string name="book_name">Book name</string>
    <string name="book_isbn">ISBN for book</string>
    <string name="display_pages_both">Pages completed/Pages total</string>
    <string name="add_entry_button">Add Entry</string>
    <string name="book_image_desc">Image of book</string>
    <string name="display_pages_both_desc">Displays numerical value of pages completed and pages total</string>
    <string name="enter_end_time">Enter time spent</string>
    <string name="enter_pages_completed">Enter pages completed</string>
    <string name="enter_start_time">Enter time started</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_reading_details">Enter reading details</string>
    <string name="end_time_hint">Time spent reading the book this session.</string>
    <string name="pages_completed_hint">Enter the number of pages completed this session.</string>
    <string name="enter_date_hint">Enter the date that this session was performed.</string>
    <string name="start_time_hint">Enter the time spent reading this session</string>
    <string name="enter_isbn_hint">Please enter the ISBN of the book.</string>
    <string name="monthname">Month of current Data</string>
    <string name="book_isbn_header">Book ISBN</string>
    <string name="scan_isbn">Scan ISBN</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="book_already_added">Book already added to the bookshelf, not adding again.</string>
    <string name="enter_valid_isbn">Please enter a valid ISBN</string>
    <string name="return_isbn">Set ISBN</string>
</resources>
