<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/details_name_view"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:inputType="none"
        android:text="@string/enter_reading_details"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/enter_date_hint"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_name_view"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/dialog_details_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:autofillHints="@string/start_time_hint"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/enter_start_time"
        android:inputType="time"
        android:longClickable="false"
        app:layout_constraintStart_toStartOf="@+id/dialog_details_date"
        app:layout_constraintTop_toBottomOf="@+id/dialog_details_date"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/dialog_details_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/end_time_hint"
        android:ems="10"
        android:hint="@string/enter_end_time"
        android:inputType="time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_details_time_start"
        app:layout_constraintTop_toBottomOf="@+id/dialog_details_time_start"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/dialog_details_pages_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/pages_completed_hint"
        android:ems="10"
        android:hint="@string/enter_pages_completed"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_details_time_end"
        app:layout_constraintTop_toBottomOf="@+id/dialog_details_time_end"
        tools:targetApi="o" />


</android.support.constraint.ConstraintLayout>