<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/display_book_name"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/book_name"
        android:text="@string/book_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="112dp"
        android:layout_height="146dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/book_image_desc"
        app:layout_constraintBottom_toTopOf="@+id/book_completion_progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@drawable/book_generic_213x" />

    <TextView
        android:id="@+id/display_isbn"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/book_isbn"
        android:text="@string/book_isbn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toBottomOf="@+id/display_book_name" />

    <TextView
        android:id="@+id/display_pages"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/display_pages_both_desc"
        android:text="@string/display_pages_both"
        app:layout_constraintBottom_toTopOf="@+id/book_completion_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toBottomOf="@+id/display_isbn"
        app:layout_constraintVertical_bias="0.028" />

    <GridView
        android:id="@+id/heatmapgrid"
        android:layout_width="0dp"
        android:layout_height="346dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:drawSelectorOnTop="false"
        android:numColumns="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_reading_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_entry_button"
        app:layout_constraintBottom_toTopOf="@+id/book_completion_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toBottomOf="@+id/display_pages"
        app:layout_constraintVertical_bias="0.021" />

    <ProgressBar
        android:id="@+id/book_completion_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/heatmapgrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_image" />
</android.support.constraint.ConstraintLayout>