<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="147dp"
        android:layout_height="184dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/book_image_desc"
        app:layout_constraintBottom_toTopOf="@+id/book_completion_progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/display_book_name"
        app:srcCompat="@drawable/book_generic_213x" />

    <TextView
        android:id="@+id/display_book_name"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/book_name"
        android:paddingTop="0dp"
        android:text="@string/book_name"
        app:layout_constraintBottom_toTopOf="@+id/display_isbn"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <TextView
        android:id="@+id/display_isbn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/book_isbn"
        android:text="@string/book_isbn"
        app:layout_constraintBottom_toTopOf="@+id/display_pages"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toBottomOf="@+id/display_book_name" />

    <TextView
        android:id="@+id/display_pages"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/display_pages_both_desc"
        android:text="@string/display_pages_both"
        app:layout_constraintBottom_toTopOf="@+id/add_reading_entry"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toBottomOf="@+id/display_isbn" />

    <Button
        android:id="@+id/add_reading_entry"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_entry_button"
        app:layout_constraintBottom_toTopOf="@+id/book_completion_progress_bar"
        app:layout_constraintStart_toEndOf="@+id/book_image"
        app:layout_constraintTop_toBottomOf="@+id/display_pages" />

    <ProgressBar
        android:id="@+id/book_completion_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="352dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/heatmapgrid"
        app:layout_constraintEnd_toEndOf="@+id/heatmapgrid"
        app:layout_constraintStart_toStartOf="@+id/heatmapgrid" />

    <GridView
        android:id="@+id/heatmapgrid"
        android:layout_width="352dp"
        android:layout_height="330dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:drawSelectorOnTop="false"
        android:horizontalSpacing="16dp"
        android:numColumns="7"
        android:padding="16dp"
        android:verticalSpacing="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>